# fol-parser

./: .gitignore  CMakeLists.txt  README.md  bnf_rules.txt  fol.l  fol.y  run.sh  wget-log
ASTtree/: AllNodes.h  ConstantNode.h  ForallNode.h  Node.h  PredicateNode.cpp  VariableNode.h
DS/: ast_tree.h
SAT_Solver_Porgram/: CMakeLists.txt  Resolution_SAT_Solver_BFS.cpp  resolution.txt
data/: factoring_samples.json  factoring_samples_with_graphs.json  k3_graph.json  training_data.json  training_data_0.json  training_data_0_failure.json  training_data_0_success.json  training_data_100_failure.json  training_data_100_success.json  training_data_101_failure.json  training_data_101_success.json  training_data_102_failure.json  training_data_103_success.json  training_data_104_failure.json  training_data_105_failure.json  training_data_106_success.json  training_data_107_success.json  training_data_10_failure.json  training_data_10_success.json  training_data_11_failure.json  training_data_11_success.json  training_data_12_failure.json  training_data_12_success.json  training_data_13_failure.json  training_data_13_success.json  training_data_14_failure.json  training_data_14_success.json  training_data_15_failure.json  training_data_15_success.json  training_data_16_failure.json  training_data_16_success.json  training_data_17_failure.json  training_data_17_success.json  training_data_18_failure.json  training_data_18_success.json  training_data_19_failure.json  training_data_19_success.json  training_data_1_failure.json  training_data_1_success.json  training_data_20_failure.json  (+132 more)
data/newreward/: training_data_00_success.json  training_data_0_failure.json  training_data_0_success.json  training_data_10_failure.json  training_data_11_success.json  training_data_12_success.json  training_data_13_success.json  training_data_14_success.json  training_data_15_success.json  training_data_16_success.json  training_data_17_success.json  training_data_18_success.json  training_data_19_success.json  training_data_1_success.json  training_data_20_success.json  training_data_21_success.json  training_data_22_failure.json  training_data_23_failure.json  training_data_24_failure.json  training_data_25_failure.json  training_data_26_failure.json  training_data_27_failure.json  training_data_28_failure.json  training_data_29_failure.json  training_data_2_success.json  training_data_30_failure.json  training_data_31_failure.json  training_data_32_success.json  training_data_33_failure.json  training_data_34_success.json  training_data_35_success.json  training_data_36_failure.json  training_data_37_failure.json  training_data_38_failure.json  training_data_39_failure.json  training_data_3_success.json  training_data_40_failure.json  training_data_41_success.json  training_data_42_success.json  training_data_43_success.json  (+31 more)
include/: AllNodes.h  ConstantNode.h  FunctionNode.h  Node.h  Parser.h  PredicataNode.h
include/ast/: AllNodes.h  ConstantNode.h  ForallNode.h  FunctionNode.h  Node.h  PredicataNode.h  TermListNode.h  UnaryOpNode.h  VariableNode.h
include/logicsystem/: BFSStrategy.h  BiapartiteChecker.h  CNF.h  Clause.h  ConstantTable.h  DFSStrategy.h  DataCollector.h  Fact.h  HeuristicStrategy.h  KnowledgeBase.h  KnowledgeBaseBuilder.h  Literal.h  NeuralHeuristicSearch.h  PredicateTable.h  ProcessManager.h  ProofState.h  Resolution.h  ResolutionPair.h  Resolver.h  SLIHeuristicProver.h  SLIMCTSAction.h  SLIMCTSProver.h  SLIMCTSState.h  SLINode.h  SLIOperation.h  SLIResolution.h  SLITree.h  SearchStrategy.h  StateManager.h  SymbolType.h  Unifier.h  VariableRenamer.h  VariableTable.h
include/logicsystem/operation/: AddOperation.h  AncestryOperation.h  FactoringOperation.h  Operation.h  Operations.h  TruncateOperation.h
include/mcts/: TreeNodeT.h  ofxMSAmcts.h
input_files/: clause1.txt  clause2.txt
neural_network/: __init__.py  graph_generator.py  graph_transformer.py  processed_sequences.json  read_data.py  setup.py  train.py  unified_tokenizer.pkl
neural_network/data/: __init__.py  factoring_trainer.py  read_data.py
neural_network/models/: common.py  first_stage_model.py  second_stage_model.py
neural_network/neural_network.egg-info/: top_level.txt
neural_network/neural_server/: neural_server.py  neural_server2.py
neural_network/test/: test_first_fac_model.py  test_first_stage_fac.py  test_phase1.py
neural_network/train/: train_phase1.py  train_phase2.py
results/: all_result.csv  data_process.py  data_process2.py
src/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  ConstantNode.cpp  FunctionNode.cpp  PredicateNode.cpp  TermListNode.cpp  UnaryOpNode.cpp
src/lexer/: CMakeLists.txt  fol.l
src/logicsystem/: CMakeLists.txt  CNF.cpp  Clause.cpp  ConstantTable.cpp  Fact.cpp  KnowledgeBase.cpp  KnowledgeBaseBuilder.cpp  Literal.cpp  PredicateTable.cpp  Resolution.cpp  Resolver.cpp  SLIHeuristicProver.cpp  SLIMCTSProver.cpp  SLINode.cpp  SLIResolution.cpp  SLITree.cpp  Unifier.cpp  VariableRenamer.cpp  VariableTable.cpp
src/logicsystem/operation/: AddOperation.cpp  CMakeLists.txt  FactoringOperation.cpp  TruncateOperation.cpp
src/parser/: CMakeLists.txt  fol.y
src/tests/: CMakeLists.txt
src/tests/logicsystem/: 2ColorableTest.cpp  AddFactTest.cpp  CMakeLists.txt  ClauseTest.cpp  ColoringNeuralTest.cpp  ColoringSLIMCTSTest.cpp  ColoringSLIResolutionTest.cpp  GenGraphData.cpp  GraphColoringTest.cpp  KBTest.cpp  KnowledgeBaseBuilderTest.cpp  LiteralHashTest.cpp  MGURenameTest.cpp  RandomGraphColoringSLIMCTSTest.cpp  ResolutionTest.cpp  SLIMCTSDeepCopyTest.cpp  SLIResolutionTest.cpp  SLITreeHashTest.cpp  SLITreeTest.cpp  UnifierTest.cpp  VariableRenamerTest.cpp
